--- a/themes/hugo-agency-theme/layouts/partials/about.html
+++ b/themes/hugo-agency-theme/layouts/partials/about.html
@@ -5,6 +5,12 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">{{ with .Site.Params.about.title }}{{ . | markdownify }}{{ end }}</h2>
         <h3 class="section-subheading text-muted">{{ with .Site.Params.about.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+        <div class="timeline-image">
+          <img class="img-circle" src="img/IMG_20180602_165113.jpg" alt="">
+          <br>
+          <br>
+          <br>
+       </div>
       </div>
     </div>
     <div class="row">
