--- a/themes/hugo-agency-theme/layouts/partials/contact.html
+++ b/themes/hugo-agency-theme/layouts/partials/contact.html
@@ -53,7 +53,6 @@
                 </div>
                 {{ end }}
               </div>
-              <div data-netlify-recaptcha="true"></div>
               <div class="col-md-6">
               {{ with $contact.form.message }}
                 <div class="form-group">
@@ -61,8 +60,8 @@
                   <p class="help-block text-danger"></p>
                 </div>
                 {{ end }}
-
               </div>
+              <div class="col-md-6" data-netlify-recaptcha="true"></div>
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div class="text-success" id="success" style="display:none;">
