--- a/themes/hugo-agency-theme/layouts/partials/contact.html
+++ b/themes/hugo-agency-theme/layouts/partials/contact.html
@@ -23,7 +23,7 @@
           name="sentMessage"
           id="contactForm
           {{- if $contact.netlify -}}
-            " data-netlify="true" data-netlify-recaptcha="true"
+            " netlify-honeypot="zipcode" data-netlify="true"
           {{- else -}}
             " action="{{- $contact.postURL | default (printf "//formspree.io/%s" (or $contact.email .Site.Params.email)) -}}"
           {{- end -}}>
@@ -31,7 +31,9 @@
           <fieldset>
             <div class="row">
               <div class="col-md-6">
-
+                <p class="hidden">
+                  <label>Don’t fill this out if you're human: <input name="zipcode" /></label>
+                </p>
                 {{ with $contact.form.name }}
                 <div class="form-group">
                   <input class="form-control" id="name" required="required" type="text" name="name" placeholder="{{ with .text }}{{ .  | markdownify }}{{ end }}" data-validation-error-msg="{{ with .warning }}{{ . | markdownify }}{{ end }}">
@@ -61,7 +63,6 @@
                 </div>
                 {{ end }}
               </div>
-              <div class="col-md-6" data-netlify-recaptcha="true"></div>
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div class="text-success" id="success" style="display:none;">
