--- a/themes/hugo-agency-theme/layouts/partials/contact.html
+++ b/themes/hugo-agency-theme/layouts/partials/contact.html
@@ -31,7 +31,7 @@
           <fieldset>
             <div class="row">
               <div class="col-md-6">
-                <p class="hidden">
+                <p class="zipcode">
                   <label>Don’t fill this out if you're human: <input name="zipcode" /></label>
                 </p>
                 {{ with $contact.form.name }}
