data-validation optional

--- a/themes/hugo-agency-theme/layouts/partials/contact.html
+++ b/themes/hugo-agency-theme/layouts/partials/contact.html
@@ -32,7 +32,7 @@
             <div class="row">
               <div class="col-md-6">
                 <p class="zipcode">
-                  <label>Don’t fill this out if you're human: <input name="zipcode" /></label>
+                  <label>Don’t fill this out if you're human: <input data-validation-optional="true" name="zipcode" /></label>
                 </p>
                 {{ with $contact.form.name }}
                 <div class="form-group">
