--- a/themes/hugo-agency-theme/layouts/partials/js.html
+++ b/themes/hugo-agency-theme/layouts/partials/js.html
@@ -23,3 +23,5 @@
 {{ range .Site.Params.custom_js }}
   <script src="{{ . | absURL }}"></script>
 {{ end }}
+
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "be57cdb3048f4e07bad42b7c504685bc"}'></script><!-- End Cloudflare Web Analytics -->
