--- a/themes/hugo-agency-theme/layouts/partials/reviews.html
+++ b/themes/hugo-agency-theme/layouts/partials/reviews.html
@@ -1,1 +1,1 @@
-<div class="taggbox" style="width:100%;height:100%" data-widget-id="123994" data-tags="false" ></div><script src="https://widget.taggbox.com/embed-lite.min.js" type="text/javascript"></script>
+<div class='sk-ww-google-reviews' data-embed-id='126760'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
